@@ -10,7 +10,7 @@
 \usage{
 textmodel_wordfish(data, dir = c(1, 2), priors = c(Inf, Inf, 3, 1),
   tol = c(1e-06, 1e-08), dispersion = c("poisson", "quasipoisson"),
-  dispersionLevel = c("feature", "overall"), dispersionFloor = FALSE)
+  dispersionLevel = c("feature", "overall"), dispersionFloor = 0)
 
 \method{print}{textmodel_wordfish_fitted}(x, n = 30L, ...)
 
@@ -37,10 +37,10 @@ quasi-Poisson (\code{"quasipoisson"})}
 options are \code{"feature"} for term-level variances, or \code{"overall"}
 for a single dispersion parameter}
 
-\item{dispersionFloor}{constraint set to 1.0 for the minimal dispersion
+\item{dispersionFloor}{constraint for the minimal underdispersion
 multiplier in the quasi-Poisson model.  Used to minimize the distorting effect
 of terms with rare term or document frequencies that appear to be severely
-underdispersed.  (We will replace this with a threshold value soon.)}
+underdispersed.  Default is 0, but this only applies if \code{dispersion = "quasipoisson"}.}
 
 \item{x}{for print method, the object to be printed}
 
@@ -77,11 +77,25 @@ The returns match those of Will Lowe's R implementation of
 textmodel_wordfish(LBGexample, dir = c(1,5))
 \dontrun{
 ie2010dfm <- dfm(ie2010Corpus, verbose = FALSE)
-(wfmodel <- textmodel_wordfish(ie2010dfm, dir = c(6,5)))
-textmodel_wordfish(ie2010dfm, dir = c(6,5), dispersion = "quasipoisson", dispersionFloor = TRUE)
+(wfm1 <- textmodel_wordfish(ie2010dfm, dir = c(6,5)))
+(wfm2a <- textmodel_wordfish(ie2010dfm, dir = c(6,5), 
+                             dispersion = "quasipoisson", dispersionFloor = 0))
+(wfm2b <- textmodel_wordfish(ie2010dfm, dir = c(6,5), 
+                             dispersion = "quasipoisson", dispersionFloor = .5))
+plot(wfm2a@phi, wfm2b@phi, xlab = "Min underdispersion = 0", ylab = "Min underdispersion = .5",
+     xlim = c(0, 1.0), ylim = c(0, 1.0))
+plot(wfm2a@phi, wfm2b@phi, xlab = "Min underdispersion = 0", ylab = "Min underdispersion = .5",
+     xlim = c(0, 1.0), ylim = c(0, 1.0), type = "n")
+underdispersedTerms <- sample(which(wfm2a@phi < 1.0), 5)
+which(features(ie2010dfm) \%in\% names(topfeatures(ie2010dfm, 20)))
+text(wfm2a@phi, wfm2b@phi, wfm2a@features, 
+     cex = .8, xlim = c(0, 1.0), ylim = c(0, 1.0), col = "grey90")
+text(wfm2a@phi[underdispersedTerms], wfm2b@phi[underdispersedTerms], 
+     wfm2a@features[underdispersedTerms], 
+     cex = .8, xlim = c(0, 1.0), ylim = c(0, 1.0), col = "black")
 if (require(austin)) {
     wfmodelAustin <- austin::wordfish(quanteda::as.wfm(ie2010dfm), dir = c(6,5))
-    cor(wfmodel@theta, wfmodelAustin$theta)
+    cor(wfm1@theta, wfm1Austin$theta)
 }}
 }
 \author{
