@@ -35,8 +35,8 @@ BEGIN_RCPP
 END_RCPP
 }
 // wordfishcpp
-Rcpp::List wordfishcpp(SEXP wfm, SEXP dir, SEXP priors, SEXP tol, SEXP disp);
-RcppExport SEXP quanteda_wordfishcpp(SEXP wfmSEXP, SEXP dirSEXP, SEXP priorsSEXP, SEXP tolSEXP, SEXP dispSEXP) {
+Rcpp::List wordfishcpp(SEXP wfm, SEXP dir, SEXP priors, SEXP tol, SEXP disp, SEXP dispfloor);
+RcppExport SEXP quanteda_wordfishcpp(SEXP wfmSEXP, SEXP dirSEXP, SEXP priorsSEXP, SEXP tolSEXP, SEXP dispSEXP, SEXP dispfloorSEXP) {
 BEGIN_RCPP
     Rcpp::RObject __result;
     Rcpp::RNGScope __rngScope;
@@ -45,7 +45,8 @@ BEGIN_RCPP
     Rcpp::traits::input_parameter< SEXP >::type priors(priorsSEXP);
     Rcpp::traits::input_parameter< SEXP >::type tol(tolSEXP);
     Rcpp::traits::input_parameter< SEXP >::type disp(dispSEXP);
-    __result = Rcpp::wrap(wordfishcpp(wfm, dir, priors, tol, disp));
+    Rcpp::traits::input_parameter< SEXP >::type dispfloor(dispfloorSEXP);
+    __result = Rcpp::wrap(wordfishcpp(wfm, dir, priors, tol, disp, dispfloor));
     return __result;
 END_RCPP
 }
